<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryColor"
    android:paddingStart="16dp"
    android:paddingEnd="16dp"
    tools:context=".SettingsFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView2"
                android:layout_width="352dp"
                android:layout_height="192dp"
                android:layout_marginTop="32dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="15dp"
                app:cardElevation="0dp"
                app:cardUseCompatPadding="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="330dp"
                    android:layout_height="258dp"
                    android:padding="8dp">

                    <TextView
                        android:id="@+id/textLogition"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/acme"
                        android:paddingStart="110dp"
                        android:paddingEnd="40dp"
                        android:text="@string/Location"
                        android:textColor="#000000"
                        android:textSize="34sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="1.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <RadioGroup
                        android:id="@+id/location_radio_group"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textLogition">

                        <RadioButton
                            android:id="@+id/radio_gps"
                            android:layout_width="297dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="15dp"
                            android:drawableEnd="@drawable/location"
                            android:drawablePadding="15dp"
                            android:layoutDirection="rtl"
                            android:paddingLeft="15dp"
                            android:text="@string/Gps"
                            android:textColor="#000000"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            tools:layout_editor_absoluteX="118dp"
                            tools:layout_editor_absoluteY="42dp" />

                        <RadioButton
                            android:id="@+id/radio_map"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginStart="15dp"
                            android:layout_marginTop="20dp"
                            android:drawableEnd="@drawable/map"
                            android:drawablePadding="15dp"
                            android:layoutDirection="rtl"
                            android:paddingLeft="15dp"
                            android:text="@string/Map"
                            android:textColor="#000000"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            tools:layout_editor_absoluteX="125dp"
                            tools:layout_editor_absoluteY="122dp" />

                    </RadioGroup>
                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView3"
                android:layout_width="352dp"
                android:layout_height="192dp"
                android:layout_marginTop="32dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="15dp"
                app:cardElevation="0dp"
                app:cardUseCompatPadding="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardView2">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="330dp"
                    android:layout_height="173dp"
                    android:padding="8dp">

                    <TextView
                        android:id="@+id/textLanguage"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/acme"
                        android:paddingStart="110dp"
                        android:paddingEnd="40dp"
                        android:text="@string/language"
                        android:textColor="#000000"
                        android:textSize="34sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="1.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <RadioGroup
                        android:id="@+id/language_radio_group"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textLanguage">

                        <RadioButton
                            android:id="@+id/radio_Eg"
                            android:layout_width="297dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="15dp"
                            android:drawableEnd="@drawable/text"
                            android:drawablePadding="15dp"
                            android:layoutDirection="rtl"
                            android:paddingLeft="15dp"
                            android:text="@string/English"
                            android:textColor="#000000"
                            android:textSize="20sp"

                            android:textStyle="bold"
                            tools:layout_editor_absoluteX="118dp"
                            tools:layout_editor_absoluteY="42dp" />

                        <RadioButton
                            android:id="@+id/radio_Ar"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginStart="15dp"
                            android:layout_marginTop="20dp"
                            android:drawableEnd="@drawable/arabic"
                            android:drawablePadding="15dp"
                            android:layoutDirection="rtl"
                            android:paddingLeft="15dp"
                            android:text="@string/Arabic"
                            android:textColor="#000000"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            tools:layout_editor_absoluteX="125dp"
                            tools:layout_editor_absoluteY="122dp" />

                    </RadioGroup>
                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView4"
                android:layout_width="352dp"
                android:layout_height="220dp"
                android:layout_marginTop="32dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="15dp"
                app:cardElevation="0dp"
                app:cardUseCompatPadding="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardView3">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="330dp"
                    android:layout_height="wrap_content"
                    android:padding="8dp">

                    <TextView
                        android:id="@+id/textTemperature"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/acme"
                        android:paddingStart="100dp"
                        android:paddingEnd="40dp"
                        android:text="@string/temperature"
                        android:textColor="#000000"
                        android:textSize="30sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="1.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <RadioGroup
                        android:id="@+id/Temperature_radio_group"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textTemperature">

                        <RadioButton
                            android:id="@+id/radio_K"
                            android:layout_width="297dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="15dp"
                            android:drawableEnd="@drawable/kelvin"
                            android:drawablePadding="15dp"
                            android:layoutDirection="rtl"
                            android:paddingLeft="15dp"
                            android:text="@string/kelvin"
                            android:textColor="#000000"
                            android:textSize="20sp"

                            android:textStyle="bold"
                            tools:layout_editor_absoluteX="118dp"
                            tools:layout_editor_absoluteY="42dp" />

                        <RadioButton
                            android:id="@+id/radio_C"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginStart="15dp"
                            android:layout_marginTop="10dp"
                            android:drawableEnd="@drawable/celsius"
                            android:drawablePadding="15dp"
                            android:layoutDirection="rtl"
                            android:paddingLeft="15dp"
                            android:text="@string/Celsius"
                            android:textColor="#000000"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            tools:layout_editor_absoluteX="125dp"
                            tools:layout_editor_absoluteY="122dp" />

                        <RadioButton
                            android:id="@+id/radio_F"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginStart="15dp"
                            android:layout_marginTop="10dp"
                            android:drawableEnd="@drawable/k"
                            android:drawablePadding="15dp"
                            android:layoutDirection="rtl"
                            android:paddingLeft="15dp"
                            android:text="@string/Fahrenheit"
                            android:textColor="#000000"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            tools:layout_editor_absoluteX="125dp"
                            tools:layout_editor_absoluteY="122dp" />

                    </RadioGroup>
                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView5"
                android:layout_width="352dp"
                android:layout_height="180dp"
                android:layout_marginTop="32dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="15dp"
                app:cardElevation="0dp"
                app:cardUseCompatPadding="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardView4">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="330dp"
                    android:layout_height="wrap_content"
                    android:padding="8dp">

                    <TextView
                        android:id="@+id/textWind_speed"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/acme"
                        android:paddingStart="100dp"
                        android:paddingEnd="40dp"
                        android:text="@string/Wind_Speed"
                        android:textColor="#000000"
                        android:textSize="30sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="1.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <RadioGroup
                        android:id="@+id/wind_speed_radio_group"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textWind_speed">

                        <RadioButton
                            android:id="@+id/radio_miles_hour"
                            android:layout_width="297dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="15dp"
                            android:drawableEnd="@drawable/speedometer"
                            android:drawablePadding="15dp"
                            android:layoutDirection="rtl"
                            android:paddingLeft="15dp"
                            android:text="@string/miles_hour"
                            android:textColor="#000000"
                            android:textSize="20sp"

                            android:textStyle="bold"
                            tools:layout_editor_absoluteX="118dp"
                            tools:layout_editor_absoluteY="42dp" />

                        <RadioButton
                            android:id="@+id/radio_meter_sec"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginStart="15dp"
                            android:layout_marginTop="20dp"
                            android:drawableEnd="@drawable/stopwatch"
                            android:drawablePadding="15dp"
                            android:layoutDirection="rtl"
                            android:paddingLeft="15dp"
                            android:text="@string/meter_sec"
                            android:textColor="#000000"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            tools:layout_editor_absoluteX="125dp"
                            tools:layout_editor_absoluteY="122dp" />

                    </RadioGroup>
                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>